--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GitHubTrendingListApp</string>
+
+    <string name="header">Trending</string>
+
 </resources>
